# TensorRT

./: plugin_test.py  plugin_test_backup.py
custom_plugin/leakyReluTestPlugin_backup/: CMakeLists.txt
custom_plugin/leakyReluTestPlugin_backup/source/: lReluTestPlugin.h
custom_plugin/myTestPlugin/: CMakeLists.txt  plugin_test.py
custom_plugin/myTestPlugin/source/: myTestKernel.cu  myTestKernel.h  myTestPlugin.cpp  myTestPlugin.h
docker/: launch.sh
export/: build_engine.py  export_retinanet.sh  gs_efficient_nms_plugin.py  infer.py
plugin/: CMakeLists_backup.txt  InferPlugin.cpp  InferPlugin_backup.cpp
plugin/common/: kernel.h
plugin/common/kernels/: lReLUTest.cu
plugin/efficientNMSPlugin/: efficientNMSInference.cuh  efficientNMSPlugin.cpp  efficientNMSPlugin.h
plugin/leakyReluTestPlugin/: lReluTestPlugin.cpp  lReluTestPlugin.h
plugin/testPlugin/: testPlugin.cpp  testPlugin.h  testPluginKernel.cu  testPluginKernel.h
testplugin/leakyReluTestPlugin/: make_network_plugin.py  plugin_test.py
testplugin/leakyReluTestPlugin/gs_test/: build_engine.py  export.sh  gs_plugin.py  init_simple_onnx.py  test_conv.onnx  test_conv_plugin.onnx  test_onnx.py  test_scratch.onnx
testplugin/leakyReluTestPlugin/source/: lReLUTestKernel.cu  lReLUTestKernel.h  lReluTestPlugin.cpp
